@@ -22,6 +22,7 @@ New Features in taskwarrior 2.4.0
   - The filter form 'name:value' now maps to the partial match operator '=',
     rather than the exact match operator, '=='.  This means that dates now
     match on the day by default, not the time also.
+  - UDA indicator format.
   - Hooks.
   - New and updated holidays.rc files.
 
@@ -47,6 +48,7 @@ New configuration options in taskwarrior 2.4.0
     urgency.
   - New 'recurrence.confirmation' which allows bypassing confirmation for
     changes to recurring tasks, by accepting, rejecting or prompting.
+  - New 'uda.<name>.indicator' to override the UDA indicator.
 
 Newly deprecated features in taskwarrior 2.4.0
 
